<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:imagetext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="340dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/simdv_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:background="@drawable/shape_out_border"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:background="@drawable/shape_in_border"
            android:layout_margin="28dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <openeyes.dr.openeyes.widget.CustomTextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:text="Eyepetizer" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/simdv_vague"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
              android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"
                android:text="分享"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/share_title"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:text="『你的手机已被格式化』"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="30dp"
                android:background="@color/colorGraylight"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <openeyes.dr.openeyes.widget.CustomImageTextView
                    android:id="@+id/share_wechat"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    imagetext:image="@drawable/share_wechat_white"
                    imagetext:text="@string/wechat"
                    imagetext:textColor="@color/colorGraylight"
                    >

                </openeyes.dr.openeyes.widget.CustomImageTextView>

                <openeyes.dr.openeyes.widget.CustomImageTextView
                    android:id="@+id/share_moments"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    imagetext:image="@drawable/share_moments_white"
                    imagetext:text="@string/moments"
                    imagetext:textColor="@color/colorGraylight"
                    >

                </openeyes.dr.openeyes.widget.CustomImageTextView>

                <openeyes.dr.openeyes.widget.CustomImageTextView
                    android:id="@+id/share_weibo"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    imagetext:image="@drawable/share_weibo_white"
                    imagetext:text="@string/weibo"
                    imagetext:textColor="@color/colorGraylight"
                    >

                </openeyes.dr.openeyes.widget.CustomImageTextView>

                <openeyes.dr.openeyes.widget.CustomImageTextView
                    android:id="@+id/share_qq"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    imagetext:image="@drawable/share_qq_white"
                    imagetext:text="@string/qq"
                    imagetext:textColor="@color/colorGraylight"
                    >

                </openeyes.dr.openeyes.widget.CustomImageTextView>

                <openeyes.dr.openeyes.widget.CustomImageTextView
                    android:id="@+id/share_qzone"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    imagetext:image="@drawable/share_qzone_white"
                    imagetext:text="@string/qzone"
                    imagetext:textColor="@color/colorGraylight"
                    >

                </openeyes.dr.openeyes.widget.CustomImageTextView>

                <openeyes.dr.openeyes.widget.CustomImageTextView
                    android:id="@+id/share_more"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    imagetext:image="@drawable/share_more_white"
                    imagetext:text="@string/more"
                    imagetext:textColor="@color/colorGraylight"
                    >

                </openeyes.dr.openeyes.widget.CustomImageTextView>
            </LinearLayout>

            <View
                android:layout_marginTop="5dp"
                android:background="@color/colorGraylight"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/share_cancel"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="取消"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>


    </FrameLayout>



</LinearLayout>