<?xml version="1.0" encoding="utf-8"?>
<openeyes.dr.openeyes.widget.ResideLayout android:id="@+id/resideLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="openeyes.dr.openeyes.MainActivity"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <openeyes.dr.openeyes.widget.ColorRelativeLayout
        android:background="@drawable/landing_background"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:id="@+id/top_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="55dp"
                android:layout_height="80dp"
                fresco:actualImageScaleType="centerCrop"
                fresco:placeholderImageScaleType="centerCrop"
                fresco:roundedCornerRadius="50dp"
                />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="10dp"
                android:text="darryrzhong"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_menu"
            android:layout_below="@+id/top_menu">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_collect"
                    style="@style/MenuStyle"
                    android:text="@string/collection"
                    android:drawableLeft="@drawable/downloads"
                    />

                <TextView

                    android:id="@+id/tv_mydown"
                    style="@style/MenuStyle"
                    android:text="@string/download"
                    android:drawableLeft="@drawable/history"

                    />

                <TextView
                    android:id="@+id/tv_fuli"
                    style="@style/MenuStyle"
                    android:text="@string/fuli"
                    android:drawableLeft="@drawable/movie"
                    />

                <TextView
                    android:id="@+id/tv_share"
                    style="@style/MenuStyle"
                    android:text="@string/share"
                    android:drawableLeft="@drawable/share"
                    />

                <TextView
                    android:id="@+id/tv_feedback"
                    style="@style/MenuStyle"
                    android:text="@string/feedback"
                    android:drawableLeft="@drawable/more"
                    />

                <TextView
                    android:visibility="invisible"
                    android:id="@+id/tv_setting"
                    style="@style/MenuStyle"
                    android:text="@string/setting"
                    android:drawableLeft="@drawable/set"
                    />

                <RelativeLayout
                    android:id="@+id/weather_rl"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/weather_iv"
                        android:layout_alignBottom="@+id/city"
                        android:background="@drawable/weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/temp"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/weather_iv"
                        android:textColor="@color/colorWhite"
                        android:text="23°"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/city"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorWhite"
                        android:layout_toRightOf="@+id/weather_iv"
                        android:layout_below="@+id/temp"
                        android:text="无锡市"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>



        <LinearLayout
            android:id="@+id/bottom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:padding="12dp"
                android:text="关于"
                android:drawableLeft="@drawable/about"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:padding="12dp"
                android:text="主题"
                android:drawableLeft="@drawable/them"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </openeyes.dr.openeyes.widget.ColorRelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <openeyes.dr.openeyes.widget.CustomTextView
                android:id="@+id/main_toolbar_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today" />
            <openeyes.dr.openeyes.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:text="Eyepetizer"/>
            <ImageButton
                android:id="@+id/main_toolbar_iv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@null"
                android:src="@drawable/main_toolbar_eye_selector"/>
        </android.support.v7.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:background="@color/colorGray"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:id="@+id/main_ll_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_daily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="每日精选"
                android:textColor="@drawable/main_menu_selector" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_find"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="发现更多"
                android:textColor="@drawable/main_menu_selector" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_hot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="热门排行"
                android:textColor="@drawable/main_menu_selector" />
        </LinearLayout>

    </LinearLayout>


</openeyes.dr.openeyes.widget.ResideLayout>
